--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /*global settings*/
-body {
+body 
+{
     display: flex;
     font-family: 'Roboto', sans-serif;
     flex-direction: column;
@@ -10,32 +11,37 @@ body {
 
 
 /*Footer Bar*/
-.footer{
+.footer
+{
     display: flex;
     justify-content: flex-start;
     background-color: #1f2937;
     padding: 30px 0px;
 }
 
-.footer-logo{
+.footer-logo
+{
     margin-left: 150px;
     color: #f9faf8;
     font-size: 24px;
 }
 
-.link-one{
+.link-one
+{
     margin-left: auto;
     font-size: 18px;
     color: #e5e7eb;
 }
 
-.link-two{
+.link-two
+{
     font-size: 18px;
     color: #e5e7eb;
     margin-left: 25px;
 }
 
-.link-three{
+.link-three
+{
     font-size: 18px;
     color: #e5e7eb;
     margin-right: 150px;
@@ -51,29 +57,16 @@ body {
     margin: 0px;
     padding-bottom: 50px;
     padding-top: 70px;
+    justify-content: center;
+    align-items: flex-start;
 }
 
 .media-text
 {
     margin-left: 150px;
     max-width: 600px;
-    margin-right: 50px;
-}
-
-.hero-title{
-    font-size: 48px;
-    font-weight: 900;
-    color: #F9FAF8;
-}
-
-.hero-text{
-    font-size: 18px;
-    color: #e5e7eb;
-}
-
-.hero-button{
-    color: #e5e7eb;
-    font-size: 20px;
+    margin-right: 100px;
+    padding-bottom: 0px;
 }
 
 .media img
@@ -83,5 +76,84 @@ body {
     max-height: 400px;
     flex: auto;
     margin-right: 150px;
-    margin-left: auto;
+}
+
+.hero-title
+{
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+}
+
+.hero-text
+{
+    font-size: 18px;
+    color: #e5e7eb;
+    padding-top: 25px;
+}
+
+.hero-button
+{
+    color: #F9FAF8;
+    font-size: 20px;
+    background-color: #3882f6;
+    padding: 5px 0px;
+    border-radius: 5px;
+    width: 100px;
+    margin-top: 25px;
+}
+
+.signup
+{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*Gallery*/
+.gallery
+{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding-bottom: 100px;
+}
+
+.gallery-title
+{
+    padding: 30px 0px;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1f2937;
+}
+
+.gallery-items
+{
+    display: flex;
+    gap: 50px;
+}
+
+.item
+{
+    display: flex;
+    flex-direction: column;
+    max-width: 200px;
+}
+
+.item img{
+    flex: auto;
+    object-fit: cover;
+    width: 200px;
+    max-width: 200px;
+    max-height: 200px;
+    border: 5px solid #3882f6;
+    border-radius: 5px;
+}
+
+.content {
+    justify-content: flex-start;
+    align-items: center;
+    text-align: center;
+    max-width: 200px;
 }
